--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Xcode
+    - name: Setup Xcode 16.2
       uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: '16.2'
@@ -30,14 +30,14 @@ jobs:
           CODE_SIGNING_REQUIRED=NO
 
   test:
-    name: Run Tests on iOS 26.0.1
+    name: Run Tests
     runs-on: macos-14
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Xcode
+    - name: Setup Xcode 16.2
       uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: '16.2'
@@ -47,6 +47,6 @@ jobs:
         xcodebuild test \
           -project "Restart.xcodeproj" \
           -scheme "Restart" \
-          -destination "platform=iOS Simulator,name=iPhone 16,OS=26.0.1" \
+          -destination "platform=iOS Simulator,name=iPhone 16,OS=18.2" \
           CODE_SIGNING_ALLOWED=NO \
           CODE_SIGNING_REQUIRED=NO
